add make empty directories

--- a/camembert_tuto.ipynb
+++ b/camembert_tuto.ipynb
@@ -14,7 +14,9 @@
    "outputs": [],
    "source": [
     "# !conda install torch\n",
-    "# !pip install fast-bert==1.9.1"
+    "# !pip install fast-bert==1.9.1\n",
+    "# !mkdir model\n",
+    "# !mkdir finetuned_model"
    ]
   },
   {
