compute  maximum f1 score using precision_recall_curve

--- a/camembert_test_on_tweet_cls.ipynb
+++ b/camembert_test_on_tweet_cls.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1977,15 +1977,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "08/29/2021 02:24:54 - INFO - transformers.configuration_utils -   loading configuration file twt_cls_model/model_out/config.json\n",
-      "08/29/2021 02:24:54 - INFO - transformers.configuration_utils -   Model config CamembertConfig {\n",
+      "09/14/2021 00:20:36 - INFO - transformers.configuration_utils -   loading configuration file twt_cls_model/model_out/config.json\n",
+      "09/14/2021 00:20:36 - INFO - transformers.configuration_utils -   Model config CamembertConfig {\n",
       "  \"architectures\": [\n",
       "    \"CamembertForMultiLabelSequenceClassification\"\n",
       "  ],\n",
@@ -2015,16 +2015,16 @@
       "  \"vocab_size\": 32005\n",
       "}\n",
       "\n",
-      "08/29/2021 02:24:54 - INFO - transformers.tokenization_utils_base -   Model name 'twt_cls_model/model_out' not found in model shortcut name list (camembert-base). Assuming 'twt_cls_model/model_out' is a path, a model identifier, or url to a directory containing tokenizer files.\n",
-      "08/29/2021 02:24:54 - INFO - transformers.tokenization_utils_base -   Didn't find file twt_cls_model/model_out/added_tokens.json. We won't load it.\n",
-      "08/29/2021 02:24:54 - INFO - transformers.tokenization_utils_base -   Didn't find file twt_cls_model/model_out/tokenizer.json. We won't load it.\n",
-      "08/29/2021 02:24:54 - INFO - transformers.tokenization_utils_base -   loading file twt_cls_model/model_out/sentencepiece.bpe.model\n",
-      "08/29/2021 02:24:54 - INFO - transformers.tokenization_utils_base -   loading file None\n",
-      "08/29/2021 02:24:54 - INFO - transformers.tokenization_utils_base -   loading file twt_cls_model/model_out/special_tokens_map.json\n",
-      "08/29/2021 02:24:54 - INFO - transformers.tokenization_utils_base -   loading file twt_cls_model/model_out/tokenizer_config.json\n",
-      "08/29/2021 02:24:54 - INFO - transformers.tokenization_utils_base -   loading file None\n",
-      "08/29/2021 02:24:54 - INFO - transformers.configuration_utils -   loading configuration file twt_cls_model/model_out/config.json\n",
-      "08/29/2021 02:24:54 - INFO - transformers.configuration_utils -   Model config CamembertConfig {\n",
+      "09/14/2021 00:20:36 - INFO - transformers.tokenization_utils_base -   Model name 'twt_cls_model/model_out' not found in model shortcut name list (camembert-base). Assuming 'twt_cls_model/model_out' is a path, a model identifier, or url to a directory containing tokenizer files.\n",
+      "09/14/2021 00:20:36 - INFO - transformers.tokenization_utils_base -   Didn't find file twt_cls_model/model_out/added_tokens.json. We won't load it.\n",
+      "09/14/2021 00:20:36 - INFO - transformers.tokenization_utils_base -   Didn't find file twt_cls_model/model_out/tokenizer.json. We won't load it.\n",
+      "09/14/2021 00:20:36 - INFO - transformers.tokenization_utils_base -   loading file twt_cls_model/model_out/sentencepiece.bpe.model\n",
+      "09/14/2021 00:20:36 - INFO - transformers.tokenization_utils_base -   loading file None\n",
+      "09/14/2021 00:20:36 - INFO - transformers.tokenization_utils_base -   loading file twt_cls_model/model_out/special_tokens_map.json\n",
+      "09/14/2021 00:20:36 - INFO - transformers.tokenization_utils_base -   loading file twt_cls_model/model_out/tokenizer_config.json\n",
+      "09/14/2021 00:20:36 - INFO - transformers.tokenization_utils_base -   loading file None\n",
+      "09/14/2021 00:20:36 - INFO - transformers.configuration_utils -   loading configuration file twt_cls_model/model_out/config.json\n",
+      "09/14/2021 00:20:36 - INFO - transformers.configuration_utils -   Model config CamembertConfig {\n",
       "  \"architectures\": [\n",
       "    \"CamembertForMultiLabelSequenceClassification\"\n",
       "  ],\n",
@@ -2054,10 +2054,10 @@
       "  \"vocab_size\": 32005\n",
       "}\n",
       "\n",
-      "08/29/2021 02:24:54 - INFO - transformers.modeling_utils -   loading weights file twt_cls_model/model_out/pytorch_model.bin\n",
-      "08/29/2021 02:24:59 - INFO - transformers.modeling_utils -   All model checkpoint weights were used when initializing CamembertForMultiLabelSequenceClassification.\n",
+      "09/14/2021 00:20:36 - INFO - transformers.modeling_utils -   loading weights file twt_cls_model/model_out/pytorch_model.bin\n",
+      "09/14/2021 00:20:41 - INFO - transformers.modeling_utils -   All model checkpoint weights were used when initializing CamembertForMultiLabelSequenceClassification.\n",
       "\n",
-      "08/29/2021 02:24:59 - INFO - transformers.modeling_utils -   All the weights of CamembertForMultiLabelSequenceClassification were initialized from the model checkpoint at twt_cls_model/model_out.\n",
+      "09/14/2021 00:20:41 - INFO - transformers.modeling_utils -   All the weights of CamembertForMultiLabelSequenceClassification were initialized from the model checkpoint at twt_cls_model/model_out.\n",
       "If your task is similar to the task the model of the ckeckpoint was trained on, you can already use CamembertForMultiLabelSequenceClassification for predictions without further training.\n"
      ]
     }
@@ -2578,7 +2578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2590,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2823,7 +2823,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2835,14 +2835,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "08/29/2021 03:14:57 - INFO - root -   Writing example 0 of 53\n"
+      "09/14/2021 00:21:42 - INFO - root -   Writing example 0 of 53\n"
      ]
     },
     {
@@ -2889,7 +2889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2900,7 +2900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2961,7 +2961,7 @@
        "52  0.076817"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3061,7 +3061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3122,7 +3122,7 @@
        "52            0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3221,7 +3221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3232,11 +3232,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "precision, recall, threshold = precision_recall_curve(df_y_real.values, df_y_pred.values)"
+    "#find the best f1\n",
+    "precision, recall, thresholds = precision_recall_curve(df_y_real.values, df_y_pred.values)\n",
+    "numerator = 2 * recall * precision\n",
+    "denom = recall + precision\n",
+    "f1_scores = np.divide(numerator, denom, out=np.zeros_like(denom), where=(denom!=0))\n",
+    "max_f1 = np.max(f1_scores)\n",
+    "max_f1_thresh = thresholds[np.argmax(f1_scores)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6666666666666666"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_f1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8942217826843262"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_f1_thresh"
    ]
   },
   {
@@ -3323,7 +3369,7 @@
     }
    ],
    "source": [
-    "threshold"
+    "thresholds"
    ]
   },
   {
