update 5-fold cross validation

--- a/camembert_test_on_tweet_cls_gpu.ipynb
+++ b/camembert_test_on_tweet_cls_gpu.ipynb
@@ -170,7 +170,7 @@
     "            schedule_type=\"warmup_cosine\",\n",
     "            optimizer_type=\"adamw\")\n",
     "    # validate the model \n",
-    "    loss, fbeta_score, roc_auc_score = cl_learner.validate()\n",
+    "    res = cl_learner.validate()\n",
     "\n",
     "    # append model score\n",
     "    cl_learner.save_model()\n",
@@ -191,8 +191,11 @@
     "    max_f1_recall = recall[np.argmax(f1_scores)]\n",
     "    accuracy = accuracy_score(y_true=df_y_real.values, y_pred=df_y_pred.values > max_f1_thresh)\n",
     "    results.append({'accuracy' : accuracy,\n",
-    "                    'fbeta_score' : fbeta_score,\n",
-    "                    'roc_auc_score' : roc_auc_score,\n",
+    "                    'res': res,\n",
+    "                    'precisions' : precision,\n",
+    "                    'recalls' : recall,\n",
+    "                    'thresholds' : thresholds,\n",
+    "                    'f1_scores' : f1_scores,\n",
     "                    'max_f1_precision' : max_f1_precision,\n",
     "                    'max_f1_recall' : max_f1_recall,\n",
     "                    'max_f1_thresh' : max_f1_thresh,\n",
@@ -209,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -243,8 +246,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>accuracy</th>\n",
-       "      <th>fbeta_score</th>\n",
-       "      <th>roc_auc_score</th>\n",
+       "      <th>res</th>\n",
+       "      <th>precisions</th>\n",
+       "      <th>recalls</th>\n",
+       "      <th>thresholds</th>\n",
+       "      <th>f1_scores</th>\n",
        "      <th>max_f1_precision</th>\n",
        "      <th>max_f1_recall</th>\n",
        "      <th>max_f1_thresh</th>\n",
@@ -254,81 +260,163 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.888889</td>\n",
-       "      <td>fbeta</td>\n",
-       "      <td>roc_auc</td>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>0.923077</td>\n",
-       "      <td>0.104162</td>\n",
-       "      <td>0.827586</td>\n",
+       "      <td>0.907407</td>\n",
+       "      <td>{'loss': 0.2786172404885292, 'fbeta': 0.166666...</td>\n",
+       "      <td>[0.29545454545454547, 0.27906976744186046, 0.2...</td>\n",
+       "      <td>[1.0, 0.9230769230769231, 0.9230769230769231, ...</td>\n",
+       "      <td>[0.09815139323472977, 0.09817229956388474, 0.0...</td>\n",
+       "      <td>[0.456140350877193, 0.42857142857142855, 0.436...</td>\n",
+       "      <td>0.909091</td>\n",
+       "      <td>0.769231</td>\n",
+       "      <td>0.146298</td>\n",
+       "      <td>0.833333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.867925</td>\n",
-       "      <td>fbeta</td>\n",
-       "      <td>roc_auc</td>\n",
-       "      <td>0.900000</td>\n",
-       "      <td>0.642857</td>\n",
-       "      <td>0.123647</td>\n",
-       "      <td>0.750000</td>\n",
+       "      <td>0.905660</td>\n",
+       "      <td>{'loss': 0.2968771643936634, 'fbeta': 0.188679...</td>\n",
+       "      <td>[0.45161290322580644, 0.43333333333333335, 0.4...</td>\n",
+       "      <td>[1.0, 0.9285714285714286, 0.9285714285714286, ...</td>\n",
+       "      <td>[0.11933296173810959, 0.11936142295598984, 0.1...</td>\n",
+       "      <td>[0.6222222222222222, 0.5909090909090909, 0.604...</td>\n",
+       "      <td>0.916667</td>\n",
+       "      <td>0.785714</td>\n",
+       "      <td>0.205750</td>\n",
+       "      <td>0.846154</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.867925</td>\n",
-       "      <td>fbeta</td>\n",
-       "      <td>roc_auc</td>\n",
-       "      <td>0.769231</td>\n",
-       "      <td>0.769231</td>\n",
-       "      <td>0.841273</td>\n",
-       "      <td>0.769231</td>\n",
+       "      <td>0.698113</td>\n",
+       "      <td>{'loss': 0.5070239007472992, 'fbeta': 0.132075...</td>\n",
+       "      <td>[0.28888888888888886, 0.2727272727272727, 0.27...</td>\n",
+       "      <td>[1.0, 0.9230769230769231, 0.9230769230769231, ...</td>\n",
+       "      <td>[0.10440044850111008, 0.10448513180017471, 0.1...</td>\n",
+       "      <td>[0.4482758620689655, 0.4210526315789473, 0.428...</td>\n",
+       "      <td>0.458333</td>\n",
+       "      <td>0.846154</td>\n",
+       "      <td>0.118457</td>\n",
+       "      <td>0.594595</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.943396</td>\n",
-       "      <td>fbeta</td>\n",
-       "      <td>roc_auc</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.777778</td>\n",
-       "      <td>0.093471</td>\n",
-       "      <td>0.875000</td>\n",
+       "      <td>0.905660</td>\n",
+       "      <td>{'loss': 0.25990851037204266, 'fbeta': 0.07547...</td>\n",
+       "      <td>[0.42857142857142855, 0.4, 0.42105263157894735...</td>\n",
+       "      <td>[1.0, 0.8888888888888888, 0.8888888888888888, ...</td>\n",
+       "      <td>[0.08622341603040695, 0.08633860945701599, 0.0...</td>\n",
+       "      <td>[0.6, 0.5517241379310346, 0.5714285714285714, ...</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.093429</td>\n",
+       "      <td>0.750000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.867925</td>\n",
-       "      <td>fbeta</td>\n",
-       "      <td>roc_auc</td>\n",
-       "      <td>0.555556</td>\n",
-       "      <td>0.714286</td>\n",
-       "      <td>0.403623</td>\n",
-       "      <td>0.625000</td>\n",
+       "      <td>0.849057</td>\n",
+       "      <td>{'loss': 0.3114274591207504, 'fbeta': 0.037735...</td>\n",
+       "      <td>[0.1590909090909091, 0.13953488372093023, 0.14...</td>\n",
+       "      <td>[1.0, 0.8571428571428571, 0.8571428571428571, ...</td>\n",
+       "      <td>[0.07898908853530884, 0.0789952203631401, 0.07...</td>\n",
+       "      <td>[0.2745098039215686, 0.24, 0.24489795918367344...</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>0.083015</td>\n",
+       "      <td>0.631579</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   accuracy fbeta_score roc_auc_score  max_f1_precision  max_f1_recall  \\\n",
-       "0  0.888889       fbeta       roc_auc          0.750000       0.923077   \n",
-       "1  0.867925       fbeta       roc_auc          0.900000       0.642857   \n",
-       "2  0.867925       fbeta       roc_auc          0.769231       0.769231   \n",
-       "3  0.943396       fbeta       roc_auc          1.000000       0.777778   \n",
-       "4  0.867925       fbeta       roc_auc          0.555556       0.714286   \n",
+       "   accuracy                                                res  \\\n",
+       "0  0.907407  {'loss': 0.2786172404885292, 'fbeta': 0.166666...   \n",
+       "1  0.905660  {'loss': 0.2968771643936634, 'fbeta': 0.188679...   \n",
+       "2  0.698113  {'loss': 0.5070239007472992, 'fbeta': 0.132075...   \n",
+       "3  0.905660  {'loss': 0.25990851037204266, 'fbeta': 0.07547...   \n",
+       "4  0.849057  {'loss': 0.3114274591207504, 'fbeta': 0.037735...   \n",
        "\n",
-       "   max_f1_thresh    max_f1  \n",
-       "0       0.104162  0.827586  \n",
-       "1       0.123647  0.750000  \n",
-       "2       0.841273  0.769231  \n",
-       "3       0.093471  0.875000  \n",
-       "4       0.403623  0.625000  "
+       "                                          precisions  \\\n",
+       "0  [0.29545454545454547, 0.27906976744186046, 0.2...   \n",
+       "1  [0.45161290322580644, 0.43333333333333335, 0.4...   \n",
+       "2  [0.28888888888888886, 0.2727272727272727, 0.27...   \n",
+       "3  [0.42857142857142855, 0.4, 0.42105263157894735...   \n",
+       "4  [0.1590909090909091, 0.13953488372093023, 0.14...   \n",
+       "\n",
+       "                                             recalls  \\\n",
+       "0  [1.0, 0.9230769230769231, 0.9230769230769231, ...   \n",
+       "1  [1.0, 0.9285714285714286, 0.9285714285714286, ...   \n",
+       "2  [1.0, 0.9230769230769231, 0.9230769230769231, ...   \n",
+       "3  [1.0, 0.8888888888888888, 0.8888888888888888, ...   \n",
+       "4  [1.0, 0.8571428571428571, 0.8571428571428571, ...   \n",
+       "\n",
+       "                                          thresholds  \\\n",
+       "0  [0.09815139323472977, 0.09817229956388474, 0.0...   \n",
+       "1  [0.11933296173810959, 0.11936142295598984, 0.1...   \n",
+       "2  [0.10440044850111008, 0.10448513180017471, 0.1...   \n",
+       "3  [0.08622341603040695, 0.08633860945701599, 0.0...   \n",
+       "4  [0.07898908853530884, 0.0789952203631401, 0.07...   \n",
+       "\n",
+       "                                           f1_scores  max_f1_precision  \\\n",
+       "0  [0.456140350877193, 0.42857142857142855, 0.436...          0.909091   \n",
+       "1  [0.6222222222222222, 0.5909090909090909, 0.604...          0.916667   \n",
+       "2  [0.4482758620689655, 0.4210526315789473, 0.428...          0.458333   \n",
+       "3  [0.6, 0.5517241379310346, 0.5714285714285714, ...          0.857143   \n",
+       "4  [0.2745098039215686, 0.24, 0.24489795918367344...          0.500000   \n",
+       "\n",
+       "   max_f1_recall  max_f1_thresh    max_f1  \n",
+       "0       0.769231       0.146298  0.833333  \n",
+       "1       0.785714       0.205750  0.846154  \n",
+       "2       0.846154       0.118457  0.594595  \n",
+       "3       0.666667       0.093429  0.750000  \n",
+       "4       0.857143       0.083015  0.631579  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    169\n",
+      "1     43\n",
+      "Name: Observation, dtype: int64\n",
+      "0    171\n",
+      "1     42\n",
+      "Name: Observation, dtype: int64\n",
+      "0    170\n",
+      "1     43\n",
+      "Name: Observation, dtype: int64\n",
+      "0    166\n",
+      "1     47\n",
+      "Name: Observation, dtype: int64\n",
+      "0    164\n",
+      "1     49\n",
+      "Name: Observation, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check train set distributions\n",
+    "for n in range(5):\n",
+    "    # splitting Dataframe (dataset not included)\n",
+    "    val_file_name = 'twt_val_set_' + str(5-n) + '.csv'\n",
+    "    train_file_name = 'twt_train_set_' + str(5-n) + '.csv'\n",
+    "    df_val = pd.read_csv('./data/' + val_file_name)\n",
+    "    df_train = pd.read_csv('./data/' + train_file_name) \n",
+    "    print(df_train.Observation.value_counts())\n",
+    " #   print(df_val.Observation.value_counts())"
    ]
   },
   {
@@ -348,8 +436,8 @@
    "source": [
     "val_set = df_tweets.sample(frac=0.2, replace=False, random_state=42)\n",
     "train_set =df_tweets.drop(index = val_set.index)\n",
-    "print('Nombre de commentaires dans le val_set:',len(val_set))\n",
-    "print('Nombre de commentaires dans le train_set:', len(train_set))\n",
+    "print('Nombre de tweets dans le val_set:',len(val_set))\n",
+    "print('Nombre de tweets dans le train_set:', len(train_set))\n",
     "val_set.to_csv('./data/twt_val_set.csv')\n",
     "train_set.to_csv('./data/twt_train_set.csv')"
    ]
